update: fix dto things, update swagger
